--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1>Ini header yaa</h1>
+    <h1 style="color:red">warna merah</h1>
     <h2>ini header tapi lebih kecil</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptate hic, quibusdam nostrum sed quam officiis, dolor, aliquam soluta expedita tempore! Officia numquam aliquam assumenda minus repudiandae. Fugit, molestiae exercitationem?</p>
-    
+
 </body>
 
 </html>
