--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
+        <!--
+            <style>
+            
+            body {background-color: cornflowerblue;}
+        </style>
+    -->
     <title>
         ini judul
     </title>
@@ -9,8 +16,9 @@
     <h1>Ini header yaa</h1>
     <h1 style="color:red">warna merah</h1>
     <h2>ini header tapi lebih kecil</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptate hic, quibusdam nostrum sed quam officiis, dolor, aliquam soluta expedita tempore! Officia numquam aliquam assumenda minus repudiandae. Fugit, molestiae exercitationem?</p>
-
+    <img src="180045.jpg" alt="yahgambarnyagaada" height="250" width="200">
+    <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptate hic, quibusdam nostrum sed quam officiis, dolor,</p>
+    <a href="https://www.google.com">ini contoh link</a>
 </body>
 
 </html>
