--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
     <img src="180045.jpg" alt="yahgambarnyagaada" height="250" width="200">
     <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptate hic, quibusdam nostrum sed quam officiis, dolor,</p>
     <a href="https://www.google.com">ini contoh link</a>
+
+    <table>
+        <tr>
+            <td>no</td>
+            <td>nama</td>
+            <td>nrp</td>
+            <td>alamat</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Lambang Akbar Wijayadi</td>
+            <td>05311940000006</td>
+            <td>Tulungagung</td>
+        </tr>
+        <tr>
+            <td>2</td>
+        </tr>
+
+    </table>
 </body>
 
 </html>
